# worldstate_parser_rs

./: .gitignore  Cargo.toml  README.md  init.py  utils.nu  worldstate_parsed.json
assets_manual/: archonShardsStoreItem.json  archon_hunt_rewards.json
example/: worldstate_parsed.json
examples/showcase/: Cargo.toml
examples/showcase/src/: main.rs
scripts/: create_hub_data.nu  fetch_data.nu
showcase/: worldstate_parsed.json
src/: core.rs  default_context_provider.rs  fissure.rs  lib.rs  main.rs  manifests.rs  world_state.rs  worldstate.rs
src/core/: calendar_reward_resolve.rs  mod.rs  resolvable_string.rs  sol_node.rs  vault_trader_resolve.rs
src/custom_maps/: mod.rs  solnode_to_region.rs
src/manifest_entries/: faction.rs  manifest_custom.rs  manifest_faction.rs  manifest_mission_type.rs  manifest_node.rs  manifest_relic_arcane.rs  mod.rs  region.rs
src/target_types/: customs_entry.rs  faction.rs  language.rs  mission_type.rs  mod.rs  node.rs  region.rs  relic.rs
src/target_types/cycles/: duviri.rs
src/target_types/worldstate/: alert.rs  archon_hunt.rs  calendar.rs  fissure.rs  flash_sale.rs  goal.rs  mod.rs  (+4 more)
src/wfcd_data/: bounty_rewards.rs  mod.rs
src/wfcd_worldstate_data/: language_item.rs  mod.rs  sortie_data.rs
src/worldstate_data/: mod.rs
src/worldstate_model/: README.md  alert.rs  archimedea.rs  archon_hunt.rs  calendar.rs  circuit.rs  daily_deal.rs  event.rs  fissure.rs  flash_sale.rs  goal.rs  invasion.rs  mod.rs  nightwave.rs  sortie.rs  syndicate_mission.rs  vault_trader.rs  void_storms.rs  void_trader.rs
testing/: recipes.json
(+17 files in other folders)
