[workspace]
members = [".", "examples/showcase"]

[package]
name = "worldstate_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
derive_more = { version = "2.1.1", features = ["debug", "display", "from_str"] }
heck = "0.5.0"
lzma-rs = "0.3.0"
pastey = "0.2.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
thiserror = "2.0.18"

tracing = "0.1.44"
reqwest = { optional = true, version = "0.13.1", features = ["json"] }
tokio = { optional = true, version = "1.49.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
] }

[features]
default = ["default_provider", "default_fetcher"]
default_provider = ["tokio", "reqwest"]
default_fetcher = ["tokio", "reqwest"]
